[Agent] Fix installers (#17077)
[Agent] Fix installers for snapshots (#17077)

--- a/x-pack/agent/_meta/agent.yml
+++ b/x-pack/agent/_meta/agent.yml
@@ -4,7 +4,7 @@
 outputs:
   default:
     type: elasticsearch
-    hosts: [127.0.0.1:9200, 127.0.0.1:9300]
+    hosts: [127.0.0.1:9200]
     username: elastic
     password: changeme
 
