--- a/x-pack/agent/pkg/agent/program/testdata/single_config-filebeat.yml
+++ b/x-pack/agent/pkg/agent/program/testdata/single_config-filebeat.yml
@@ -5,6 +5,8 @@ filebeat:
       - /var/log/hello1.log
       - /var/log/hello2.log
     index: logs-generic-default
+    vars:
+      var: value
 output:
   elasticsearch:
     hosts:
