[Elastic Agent] Fleet issues with configuring the Gateway. (#17949)
* [Elastic Agent] Fleet issues with configuring the Gateway.

This pull request ensure that the values configuration locally in the
elastic-agent.yml are correctly applied to the fleet gateway.

This also ensure that we have appropriate default sets on the Gateway.

The following options are now supported on the Gateway.

```yaml
  # Check in frequency configure the time between calls to fleet to retrieve the new configuration.
  #
  # Default is 30s
  #checkin_frequency: 30s

  # Add variance between API calls to better distribute the calls.
  #jitter: 5s

  # The Elastic Agent does Exponential backoff when an error happen.
  #
  #backoff:
  #
  # Initial time to wait before retrying the call.
  #init: 1s
  #
  # Maximum time to wait before retrying the call.
  #max: 10s

Fixes: #17900

* oh yaml

* Oh yaml again

* Changelog

--- a/x-pack/elastic-agent/_meta/elastic-agent.fleet.yml
+++ b/x-pack/elastic-agent/_meta/elastic-agent.fleet.yml
@@ -5,6 +5,24 @@
 management:
   mode: "fleet"
 
+  # Check in frequency configure the time between calls to fleet to retrieve the new configuration.
+  #
+  # Default is 30s
+  #checkin_frequency: 30s
+
+  # Add variance between API calls to better distribute the calls.
+  #jitter: 5s
+
+  # The Elastic Agent does Exponential backoff when an error happen.
+  #
+  #backoff:
+  #
+  # Initial time to wait before retrying the call.
+  # init: 1s
+  #
+  # Maximum time to wait before retrying the call.
+  # max: 10s
+
 download:
   # source of the artifacts, requires elastic like structure and naming of the binaries
   # e.g /windows-x86.zip
