Remove agent.hostname field from libbeat (#18328)
agent.hostname is not part of ECS so this removes the field. Instead the
agent.name field can be used for this purpose and it it part of ECS.
This adds an alias pointing from agent.hostname to agent.name.

Closes #16377

--- a/libbeat/_meta/fields.common.yml
+++ b/libbeat/_meta/fields.common.yml
@@ -5,10 +5,10 @@
     Contains common beat fields available in all event types.
   fields:
     - name: agent.hostname
-      type: keyword
+      type: alias
+      path: agent.name
       description: >
         Deprecated - use agent.name or agent.id to identify an agent.
-        Hostname of the agent.
 
     - name: beat.timezone
       type: alias
@@ -28,7 +28,7 @@
 
     - name: beat.hostname
       type: alias
-      path: agent.hostname
+      path: agent.name
       migration: true
 
     - name: timeseries.instance
