changed input from syslog to tcp/udp due to unsupported RFC (#18447)
Changes beat input in docs and configuration file due to unsupported RFC syslog pattern.

--- a/x-pack/filebeat/module/fortinet/firewall/ingest/pipeline.yml
+++ b/x-pack/filebeat/module/fortinet/firewall/ingest/pipeline.yml
@@ -128,6 +128,9 @@ processors:
     field: fortinet.firewall.transip
     if: "ctx.fortinet?.firewall?.transip == 'N/A'"
 - remove:
+    field: fortinet.firewall.tunnelip
+    if: "ctx.fortinet?.firewall?.tunnelip == 'N/A'"
+- remove:
     field:
     - _temp
     - message
