--- a/filebeat/module/logstash/slowlog/ingest/pipeline-plaintext.yml
+++ b/filebeat/module/logstash/slowlog/ingest/pipeline-plaintext.yml
@@ -1,4 +1,4 @@
-description: Pipeline for parsing logstash logs in the plain format
+description: Pipeline for parsing logstash slowlogs in the plain format
 on_failure:
 - set:
     field: error.message
@@ -7,22 +7,23 @@ processors:
 - grok:
     field: message
     pattern_definitions:
-      LOGSTASH_CLASS_MODULE: '[\w\.]+'
+      LOGSTASH_CLASS_MODULE: '[\w\.]+\s*'
       LOGSTASH_LOGLEVEL: INFO|ERROR|DEBUG|FATAL|WARN|TRACE
-      GREEDYMULTILINE: |-
-        (.|
-        )*
     patterns:
-    - \[%{TIMESTAMP_ISO8601:logstash.log.timestamp}\]\[%{LOGSTASH_LOGLEVEL:log.level}\s?\]\[%{LOGSTASH_CLASS_MODULE:logstash.log.module}\s*\]\[%{NOTSPACE:logstash.log.pipeline_id}\]
-      %{GREEDYMULTILINE:message}
-    - \[%{TIMESTAMP_ISO8601:logstash.log.timestamp}\]\[%{LOGSTASH_LOGLEVEL:log.level}\s?\]\[%{LOGSTASH_CLASS_MODULE:logstash.log.module}\s*\]
-      %{GREEDYMULTILINE:message}
-- rename:
-    field: '@timestamp'
-    target_field: event.created
+    - \[%{TIMESTAMP_ISO8601:logstash.slowlog.timestamp}\]\[%{LOGSTASH_LOGLEVEL:log.level}\s?\]\[%{LOGSTASH_CLASS_MODULE:logstash.slowlog.module}\]
+      %{GREEDYDATA:message}
+- grok:
+    field: logstash.slowlog.module
+    patterns:
+    - slowlog.logstash.%{WORD:logstash.slowlog.plugin_type}.%{WORD:logstash.slowlog.plugin_name}
+- grok:
+    field: message
+    patterns:
+    - '{:plugin_params=>%{GREEDYDATA:logstash.slowlog.plugin_params}, :took_in_nanos=>%{NUMBER:event.duration},
+      :took_in_millis=>%{NUMBER:logstash.slowlog.took_in_millis}, :event=>%{GREEDYDATA:logstash.slowlog.event}}'
 - date:
     if: ctx.event.timezone == null
-    field: logstash.log.timestamp
+    field: logstash.slowlog.timestamp
     target_field: '@timestamp'
     formats:
     - yyyy-MM-dd'T'HH:mm:ss,SSS
@@ -32,7 +33,7 @@ processors:
         value: '{{ _ingest.on_failure_message }}'
 - date:
     if: ctx.event.timezone != null
-    field: logstash.log.timestamp
+    field: logstash.slowlog.timestamp
     target_field: '@timestamp'
     formats:
     - yyyy-MM-dd'T'HH:mm:ss,SSS
@@ -42,7 +43,15 @@ processors:
         field: error.message
         value: '{{ _ingest.on_failure_message }}'
 - remove:
-    field: logstash.log.timestamp
+    field:
+    - message
+    - logstash.slowlog.timestamp
+- convert:
+    field: event.duration
+    type: long
+- convert:
+    field: logstash.slowlog.took_in_millis
+    type: long
 - set:
     field: event.kind
     value: event
