Fix source.address not being set for nginx ingress_controller (#18511)
Signed-off-by: chrismark <chrismarkou92@gmail.com>
Co-authored-by: chendo <github@chen.do>

--- a/filebeat/module/nginx/ingress_controller/ingest/pipeline.yml
+++ b/filebeat/module/nginx/ingress_controller/ingest/pipeline.yml
@@ -39,7 +39,7 @@ processors:
     if: ctx.source?.address == null
     value: ""
 - script:
-    if: ctx.nginx?.access?.remote_ip_list != null && ctx.nginx.ingress_controller.remote_ip_list.length > 0
+    if: ctx.nginx?.ingress_controller?.remote_ip_list != null && ctx.nginx.ingress_controller.remote_ip_list.length > 0
     lang: painless
     source: >-
       boolean isPrivate(def dot, def ip) {
