Fix fields in kvm status metricset (#18514)

--- a/metricbeat/module/kvm/_meta/fields.yml
+++ b/metricbeat/module/kvm/_meta/fields.yml
@@ -4,6 +4,14 @@
   description: >
     kvm module
   fields:
+    - name: kvm.id
+      type: long
+      description: >
+        Domain id
+    - name: kvm.name
+      type: keyword
+      description: >
+        Domain name
     - name: kvm
       type: group
       description: >
