--- a/metricbeat/module/kvm/status/_meta/fields.yml
+++ b/metricbeat/module/kvm/status/_meta/fields.yml
@@ -4,20 +4,7 @@
     status
   release: beta
   fields:
-      - name: stat
-        type: group
-        description: >
-          Memory stat
-        fields:
-          - name: state
-            type: keyword
-            description: >
-              domain state
-      - name: id
-        type: long
-        description: >
-          Domain id
-      - name: name
-        type: keyword
-        description: >
-          Domain name
+    - name: state
+      type: keyword
+      description: >
+        Domain state
