[Ingest Manager] Logging level defaults to info (#18657)
[Ingest Manager] Logging level defaults to info (#18657)

--- a/x-pack/elastic-agent/docs/elastic-agent_configuration_example.yml
+++ b/x-pack/elastic-agent/docs/elastic-agent_configuration_example.yml
@@ -27,7 +27,7 @@ settings.monitoring:
 
 # Sets log level. The default log level is info.
 # Available log levels are: error, warning, info, debug
-#logging.level: trace
+#logging.level: info
 
 datasources:
   # use the nginx package
