--- a/deploy/kubernetes/metricbeat-kubernetes.yaml
+++ b/deploy/kubernetes/metricbeat-kubernetes.yaml
@@ -335,6 +335,7 @@ rules:
   - namespaces
   - events
   - pods
+  - secrets
   verbs: ["get", "list", "watch"]
 - apiGroups: ["extensions"]
   resources:
