[Filebeat] Preserve case of http.request.method (#18359)
* Preserve case of http.request.method

ECS previously specified normalizing http.request.method to lowercase.
This resulted in the loss of information. Affects filesets from the
following versions:

- apache/access (7.7 - 7.8)
- elasticsearch/audit (7.7 - 7.8)
- iis/access (7.7 - 7.8)
- iis/error (7.7 - 7.8)
- nginx/access (7.8)
- nginx/ingress_controller (7.8)
- aws/elb (7.7 - 7.8)
- suricata/eve (7.4 - 7.8)
- zeek/http (7.8)

Closes #18154

--- a/x-pack/filebeat/module/suricata/eve/ingest/pipeline.yml
+++ b/x-pack/filebeat/module/suricata/eve/ingest/pipeline.yml
@@ -2,10 +2,10 @@
 description: Pipeline for parsing Suricata EVE logs
 
 processors:
-  - lowercase:
-      field: suricata.eve.http.http_method
-      target_field: http.request.method
-      ignore_missing: true
+  - set:
+      value: "{{suricata.eve.http.http_method}}"
+      field: http.request.method
+      if: "ctx?.suricata?.eve?.http?.http_method != null"
   - rename:
       field: suricata.eve.http.status
       target_field: http.response.status_code
