[Ingest Manager] Guard against empty stream.datasource and namespace (#18769)
[Ingest Manager] Guard against empty stream.datasource and namespace (#18769)

--- a/x-pack/elastic-agent/pkg/agent/program/testdata/enabled_true-filebeat.yml
+++ b/x-pack/elastic-agent/pkg/agent/program/testdata/enabled_true-filebeat.yml
@@ -5,6 +5,7 @@ filebeat:
     paths:
       - /var/log/hello1.log
       - /var/log/hello2.log
+    dataset: generic
     index: logs-generic-default
     processors:
       - add_fields:
