--- a/x-pack/elastic-agent/pkg/agent/program/testdata/constraints_config-filebeat.yml
+++ b/x-pack/elastic-agent/pkg/agent/program/testdata/constraints_config-filebeat.yml
@@ -4,6 +4,7 @@ filebeat:
     paths:
       - /var/log/hello1.log
       - /var/log/hello2.log
+    dataset: generic
     index: logs-generic-default
     processors:
       - add_fields:
