--- a/winlogbeat/winlogbeat.reference.yml
+++ b/winlogbeat/winlogbeat.reference.yml
@@ -34,6 +34,12 @@ winlogbeat.event_logs:
   - name: ForwardedEvents
     tags: [forwarded]
 
+  - name: Windows PowerShell
+    event_id: 400, 403, 600, 800
+
+  - name: Microsoft-Windows-PowerShell/Operational
+    event_id: 4103, 4104, 4105, 4106
+
 
 # ================================== General ===================================
 
