Add memory metrics into compute googlecloud (#18802)
* Add memory metrics into compute googlecloud

* update unit test and data.json for memory metrics

--- a/x-pack/metricbeat/module/googlecloud/compute/manifest.yml
+++ b/x-pack/metricbeat/module/googlecloud/compute/manifest.yml
@@ -16,7 +16,12 @@ input:
             - "compute.googleapis.com/instance/disk/read_ops_count"
             - "compute.googleapis.com/instance/disk/write_bytes_count"
             - "compute.googleapis.com/instance/disk/write_ops_count"
+            - "compute.googleapis.com/instance/memory/balloon/ram_size"
+            - "compute.googleapis.com/instance/memory/balloon/ram_used"
+            - "compute.googleapis.com/instance/memory/balloon/swap_in_bytes_count"
+            - "compute.googleapis.com/instance/memory/balloon/swap_out_bytes_count"
             - "compute.googleapis.com/instance/network/received_bytes_count"
             - "compute.googleapis.com/instance/network/received_packets_count"
             - "compute.googleapis.com/instance/network/sent_bytes_count"
+            - "compute.googleapis.com/instance/network/sent_packets_count"
             - "compute.googleapis.com/instance/uptime"
