[Filebeat] Improve ECS categorization field mappings in cisco module (#18537)
* Improve ECS categorization field mappings in cisco module

- asa
  + explicitly set ECS version
  + event.kind
  + event.category
  + event.type
  + related.hash
  + related.ip
  + related.user
- ftd
  + explicitly set ECS version
  + event.kind
  + event.category
  + event.type
  + related.hash
  + related.ip
  + related.user
- ios
  + explicitly set ECS version
  + event.kind
  + event.category
  + event.type

Closes #16028

Co-authored-by: Andrew Kroh <andrew.kroh@elastic.co>

--- a/x-pack/filebeat/module/cisco/ftd/config/input.yml
+++ b/x-pack/filebeat/module/cisco/ftd/config/input.yml
@@ -19,3 +19,7 @@ publisher_pipeline.disable_host: {{ inList .tags "forwarded" }}
 
 processors:
   - add_locale: ~
+  - add_fields:
+      target: ''
+      fields:
+        ecs.version: 1.5.0
