--- a/x-pack/filebeat/module/azure/activitylogs/config/azure-eventhub.yml
+++ b/x-pack/filebeat/module/azure/activitylogs/config/azure-eventhub.yml
@@ -8,3 +8,8 @@ resource_manager_endpoint: {{ .resource_manager_endpoint }}
 tags: {{.tags | tojson}}
 publisher_pipeline.disable_host: {{ inList .tags "forwarded" }}
 
+processors:
+  - add_fields:
+      target: ''
+      fields:
+        ecs.version: 1.5.0
