--- a/x-pack/elastic-agent/pkg/agent/program/testdata/single_config-filebeat.yml
+++ b/x-pack/elastic-agent/pkg/agent/program/testdata/single_config-filebeat.yml
@@ -5,7 +5,6 @@ filebeat:
       - /var/log/hello1.log
       - /var/log/hello2.log
     index: logs-generic-default
-    dataset: generic
     vars:
       var: value
     processors:
@@ -19,6 +18,26 @@ filebeat:
           target: "stream"
           fields:
             type: logs
+            dataset: generic
+            namespace: default
+  - type: log
+    paths:
+      - /var/log/hello3.log
+      - /var/log/hello4.log
+    index: testtype-generic-default
+    vars:
+      var: value
+    processors:
+      - add_fields:
+          target: "dataset"
+          fields:
+            type: testtype
+            name: generic
+            namespace: default
+      - add_fields:
+          target: "stream"
+          fields:
+            type: testtype
             dataset: generic
             namespace: default
 output:
