[Ingest Manager] Rename input.type logs to logfile (#19360)
[Ingest Manager] Rename input.type logs to logfile (#19360)

--- a/x-pack/elastic-agent/docs/elastic-agent_configuration_example.yml
+++ b/x-pack/elastic-agent/docs/elastic-agent_configuration_example.yml
@@ -35,7 +35,7 @@ settings.monitoring:
 #logging.level: trace
 
 inputs:
-  - type: logs
+  - type: logfile
     name: epm/nginx
     version: 1.7.0
     dataset.namespace: prod
