--- a/x-pack/elastic-agent/spec/filebeat.yml
+++ b/x-pack/elastic-agent/spec/filebeat.yml
@@ -38,6 +38,7 @@ rules:
         path: type
         mapper:
           logs: log
+          logfile: log
           event/file: log
           event/stdin: stdin
           event/tcp: tcp
