[Elastic Agent] Support the install, control, and uninstall of Endpoint (#19248)
* Initial spec parsing for endpoint.

* Update comment.

* Fix spec test.

* Update code so it copies the entire input.

* Fix ast test.

* Merge agent-improve-restart-loop

* Merge agent-endpoint-spec

* Refactor core/plugin/app into mostly core/ and use core/plugin for different app types.

* Work on endpoint service application.

* More fixes.

* Fix format and tests.

* Fix some imports.

* More cleanups.

* Fix export comment.

* Pass the program.Spec into the descriptor.

* Run endpoint verify, install, and uninstall when endpoint should be running.

* Fix install and uninstall of Endpoint

* Fix some small issues with service app.

* Add changelog entry.

* Fix lint and tests.

* Fix lint.

* Remove the code no longer needed because of newer config format.

* Fix rules and review.

* Update to Endpoint Security.

* Fix issues so endpoint security runs.

* Add comments.

* Update docstring.

* Some more fixes.

* Delete the extra endpoint testdata files.

* Add timeout to exec_file step.

* Fix supported map.

* Fix getting support programs by cmd.

* Improve app started checks.

* Fix buildspec.

--- a/x-pack/elastic-agent/spec/endpoint.yml
+++ b/x-pack/elastic-agent/spec/endpoint.yml
@@ -1,4 +1,27 @@
-name: Endpoint
+name: Endpoint Security
+cmd: endpoint-security
+service: 6788
+check_install:
+- exec_file:
+    path: "endpoint-security"
+    args:
+    - "verify"
+    timeout: 30
+post_install:
+- exec_file:
+    path: "endpoint-security"
+    args:
+    - "install"
+    - "--upgrade"
+    - "--resources"
+    - "endpoint-security-resources.zip"
+    timeout: 120
+pre_uninstall:
+- exec_file:
+    path: "endpoint-security"
+    args:
+      - "uninstall"
+    timeout: 120
 rules:
 - fix_stream: {}
 
