--- a/.ci/jobs/apm-beats-update.yml
+++ b/.ci/jobs/apm-beats-update.yml
@@ -5,7 +5,6 @@
     view: Beats
     concurrent: true
     project-type: multibranch
-    periodic-folder-trigger: 1w
     prune-dead-branches: true
     number-to-keep: 10
     days-to-keep: 30
@@ -19,20 +18,19 @@
         discover-pr-forks-trust: 'permission'
         discover-pr-origin: 'merge-current'
         discover-tags: true
+        head-filter-regex: '(master|7\.[x789]|8\.\d+|PR-.*)'
         disable-pr-notifications: true
         notification-context: 'apm-beats-update'
-        property-strategies:
-          all-branches:
-          - suppress-scm-triggering: true
         repo: 'beats'
         repo-owner: 'elastic'
         credentials-id: 2a9602aa-ab9f-4e52-baf3-b71ca88469c7-UserAndToken
         ssh-checkout:
           credentials: f6c7695a-671e-4f4f-a331-acdce44ff9ba
         build-strategies:
+        - skip-initial-build: true
         - tags:
             ignore-tags-older-than: -1
-            ignore-tags-newer-than: -1
+            ignore-tags-newer-than: 30
         - named-branches:
             - exact-name:
                 name: 'master'
