--- a/.ci/jobs/build-it-docker-images.yml
+++ b/.ci/jobs/build-it-docker-images.yml
@@ -15,8 +15,7 @@
       scm:
         - git:
             url: git@github.com:elastic/beats.git
-            refspec: +refs/heads/*:refs/remotes/origin/* +refs/pull/*/head:refs/remotes/origin/pr/*
-            wipe-workspace: 'True'
+            wipe-workspace: true
             name: origin
             shallow-clone: true
             credentials-id: f6c7695a-671e-4f4f-a331-acdce44ff9ba
