--- a/.ci/jobs/packaging.yml
+++ b/.ci/jobs/packaging.yml
@@ -14,7 +14,8 @@
           discover-pr-forks-trust: 'permission'
           discover-pr-origin: 'merge-current'
           discover-tags: true
-          disable-pr-notifications: false
+          head-filter-regex: '(master|7\.[x789]|8\.\d+|PR-.*)'
+          disable-pr-notifications: true
           notification-context: 'beats-packaging'
           repo: 'beats'
           repo-owner: 'elastic'
@@ -22,9 +23,10 @@
           ssh-checkout:
             credentials: f6c7695a-671e-4f4f-a331-acdce44ff9ba
           build-strategies:
+          - skip-initial-build: true
           - tags:
-              ignore-tags-older-than: 30
-              ignore-tags-newer-than: -1
+              ignore-tags-older-than: -1
+              ignore-tags-newer-than: 30
           - named-branches:
               - exact-name:
                   name: 'master'
