[Filebeat][GSuite] Initial implementation of SAML and User Accounts filesets (#19329)
* GSuite initial implementation of SAML fileset

* Document fields and generate test file

* Add documentation

* Split fields and improve docs

* Add change to CHANGELOG

* Rename config file and clean docs

* Adds user accounts fileset

* Add delegated user to google oauth

* Add types and make changes to common pipeline

* Do not stop input if array key not found

* Fix docs

* Setup for date cursor

* Add beta tag

* CHANGELOG message

* Improve ECS mappings

* Change cateogrization and types of various fields

* Change event.type to start

* Improve doc references

--- a/x-pack/filebeat/filebeat.reference.yml
+++ b/x-pack/filebeat/filebeat.reference.yml
@@ -547,6 +547,14 @@ filebeat.modules:
     # the subscription.
     var.credentials_file: ${path.config}/gcp-service-account-xyz.json
 
+#-------------------------------- Gsuite Module --------------------------------
+- module: gsuite
+  # All logs
+  saml:
+    enabled: true
+  user_accounts:
+    enabled: true
+
 #------------------------------- HAProxy Module -------------------------------
 - module: haproxy
   # All logs
